--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <script src="codigo.js"></script>
-      
+    <script src="codigo.js"></script>
+    <link rel="stylesheet" href="styles.css"> 
 
 </head>
 
 <body>
-      <h1>Práctica de encripción</h1>
-      <br>
-      <label>Mensaje sin encriptar:</label> <input type="text" id="mse">
-      <br>
-      <input type="submit" onclick="mifuncion()" value="Encriptar">
-      <p id="se">Mensaje encriptado:</p>
-      <br> <br>
-      <label>Mensaje encriptado:</label> <input type="text" id="me">
-      <br>
-      <input type="submit" onclick="mifuncion2()" value="Desencriptar">
-      <p id="sse">Mensaje sin encriptar:</p>
-
-
+    <h1>Práctica de encripción</h1>
+    <br>
+    <label>Mensaje sin encriptar:</label> <input type="text" id="mse">
+    <br>
+    <input type="submit" onclick="mifuncion()" value="Encriptar">
+    <p id="se">Mensaje encriptado:</p>
+    <br> <br>
+    <label>Mensaje encriptado:</label> <input type="text" id="me">
+    <br>
+    <input type="submit" onclick="mifuncion2()" value="Desencriptar">
+    <p id="sse">Mensaje sin encriptar:</p>
 
 </body>
 
